# Impactor

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  README.md  SECURITY.md  flake.nix  update_meta.sh
.github/workflows/: build.yml  macos-arm64-release.yml  meta.yml  release.yml
apps/plumeimpactor/: Cargo.toml  build.rs
apps/plumeimpactor/src/: certificate_reset.rs  defaults.rs  frame.rs  handlers.rs  macos_app.rs  main.rs  refresh.rs  subscriptions.rs
apps/plumeimpactor/src/appearance/: fonts.rs  mod.rs
apps/plumeimpactor/src/pages/: default.rs  install.rs  mod.rs
apps/plumeimpactor/src/screen/: general.rs  mod.rs  package.rs  progress.rs  settings.rs  utilties.rs
apps/plumeimpactor/src/screen/windows/: login_window.rs
apps/plumeimpactor/src/utils/: device.rs  package.rs
apps/plumesign/: Cargo.toml
apps/plumesign/src/: main.rs
apps/plumesign/src/commands/: account.rs  device.rs  macho.rs  mod.rs  sign.rs
crates/core/: Cargo.toml
crates/core/src/: lib.rs
crates/core/src/auth/account/: login.rs  request.rs  two_factor_auth.rs
crates/core/src/developer/v1/: capabilities.rs
crates/core/src/utils/: certificate.rs  macho.rs  mod.rs  provision.rs
crates/gestalt/: Cargo.toml  build.rs
crates/gestalt/src/: lib.rs
crates/grand_slam/: Cargo.toml
crates/grand_slam/src/: lib.rs
crates/grand_slam/src/developer/qh/: app_groups.rs  app_ids.rs  certs.rs  devices.rs  mod.rs  profile.rs  teams.rs
crates/grand_slam/src/utils/: bundle.rs  certificate.rs  macho.rs  mod.rs  provision.rs  signer.rs
crates/plume_core/: Cargo.toml
crates/plume_core/src/auth/account/: login.rs
crates/plume_core/src/developer/qh/: teams.rs
crates/plume_core/src/utils/: certificate.rs
crates/plume_store/: Cargo.toml
crates/plume_store/src/: store.rs
crates/plume_types/src/: options.rs
crates/plume_utils/: Cargo.toml
crates/plume_utils/src/: bundle.rs  device.rs  lib.rs  options.rs  package.rs  signer.rs
crates/shared/: Cargo.toml
crates/shared/src/: keychain.rs  lib.rs
crates/types/src/: device.rs
crates/utils/: Cargo.toml
crates/utils/src/: bundle.rs  device.rs  lib.rs  options.rs  package.rs  signer.rs  tweak.rs
locales/: ar.toml  de.toml  en.toml  es.toml  fi.toml  fr.toml  it.toml  ja.toml  pl.toml  ru.toml  ua.toml  vi.toml  zh_TW.toml  zh_cn.toml  zh_tw.toml
package/linux/: dev.khcrysalis.PlumeImpactor.metainfo.xml
package/macos/Impactor.app/Contents/: Info.plist
package/macos/Impactor.app/Contents/Resources/: AppIcon.icns  Assets.car
patches/: apple-codesign+0.29.0.patch
