[workspace]
resolver = "3"
members = [
    "apps/plumeimpactor",
    "apps/plumesign", 
    "3rdparty/decompress",
    "3rdparty/omnisette",
    "crates/plume_core",
    "crates/plume_gestalt", 
    "crates/plume_store",
    "crates/plume_utils",
]

[workspace.package]
edition = "2024"
version = "2.4.0"
authors = ["C <claration@riseup.net>"]
license = "MIT"
repository = "https://github.com/claration/Impactor"

# We use `opt-level = "s"` as it significantly reduces binary size.
# We could then use the `#[optimize(speed)]` attribute for spot optimizations.
# Unfortunately, that attribute currently doesn't work on intrinsics such as memset.
[profile.release]
codegen-units = 1           # reduces binary size by ~2%
debug = "full"              # No one needs an undebuggable release binary
lto = true                  # reduces binary size by ~14%
opt-level = "s"             # reduces binary size by ~25%
panic = "abort"             # reduces binary size by ~50% in combination with -Zbuild-std-features=panic_immediate_abort
split-debuginfo = "packed"  # generates a separate *.dwp/*.dSYM so the binary can get stripped
strip = "symbols"           # See split-debuginfo - allows us to drop the size by ~65%
incremental = true          # Improves re-compile times

[workspace.dependencies]
tokio = { version = "1.43", features = ["rt-multi-thread"] }
# Application
idevice = { git = "https://github.com/jkcoxson/idevice", rev = "5171e34e3a236842af1160a84d955d037ddca3af", default-features = false, features = [
    "full",
    "ring",
] }
plist = "1.8"
goblin = "0.9"
# Errors
env_logger = "0.11"
log = "0.4"
thiserror = "2.0"
# Utils
futures = { version = "0.3", default-features = false, features = ["std"] }
rustls = { version = "0.23", default-features = false, features = [
    "std",
    "tls12",
    "ring",
] }
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }
# Compression
flate2 = "1.1"
zip = "8.6"
# Cryptography
hex = "0.4"
rand = "0.8"
base64 = "0.22"
sha2 = "0.11"
regex = "1.11"
uuid = { version = "1.3", features = ["v4", "fast-rng", "macro-diagnostics"] }
# Requests
reqwest = { version = "0.13", default-features = false, features = [
    "blocking",
    "json",
    "rustls",
    "gzip",
] }
chrono = { version = "0.4", default-features = false, features = ["std", "serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1" }