[package]
name = "plumeimpactor"
edition.workspace = true
version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
idevice.workspace = true
tokio.workspace = true
thiserror.workspace = true
uuid.workspace = true
plist.workspace = true
futures.workspace = true
env_logger.workspace = true
log.workspace = true
chrono.workspace = true
rustls.workspace = true
image.workspace = true
plume_core = { path = "../../crates/plume_core", features = ["tweaks"] }
plume_utils = { path = "../../crates/plume_utils" }
plume_store = { path = "../../crates/plume_store" }

iced = { version = "0.14.0", features = ["image-without-codecs", "advanced"] }
tray-icon = { version = "0.21.2", default-features = false }
rfd = "0.16.0"
open = "5.3.3"
notify-rust = "4.11.7"
single-instance = "0.3.3"
auto-launcher = "0.6.1"

[target.'cfg(target_os = "macos")'.dependencies]
plume_gestalt = { path = "../../crates/plume_gestalt" }

[build-dependencies]
winresource = "0.1"

[target.'cfg(target_os = "linux")'.dependencies]
gtk = "0.18"
