[package]
name = "plume_core"
description = "Core library for Impactor tools."
edition.workspace = true
version.workspace = true
authors.workspace = true
license = "MPL-2.0"
repository.workspace = true

[package.metadata.patch]
crates = ["srp", "apple-codesign"]

[dependencies]
tokio.workspace = true
plist.workspace = true
uuid.workspace = true
thiserror.workspace = true
log.workspace = true
# Core dependencies
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1" }
rustls = { version = "0.23.32", features = ["ring"] }
reqwest = { version = "0.11.14", features = ["blocking", "json", "default-tls"] }
regex = "1.11.2"
base64 = "0.22"
hex = "0.4.3"
rand = "0.8.5"
# Cryptography
aes = "0.8.2"
botan = "0.12.0"
cbc = { version = "0.1.2", features = ["std"] }
hmac = "0.12.1"
pbkdf2 = "0.11"
sha1 = "0.10.6"
sha2 = "0.10.9"
rsa = "0.9.8"
# Certificates
x509-certificate = "0.24.0"
pem = "3.0.5"
pem-rfc7468 = "0.7.0"
rcgen = "0.9.3"
p12-keystore = "0.2.0" # TODO: look into p12 crate and why it doesnt support SHA256
# Apple
goblin = "0.9.3"
# Forks
apple-codesign = { git = "https://github.com/PlumeImpactor/plume-apple-platform-rs", rev = "428b42f", package = "apple-codesign", default-features =  false }
omnisette = { git = "https://github.com/PlumeImpactor/omnisette", rev = "c066ac2", package = "omnisette", features = ["remote-anisette-v3"] }
srp = { git = "https://github.com/PlumeImpactor/plume-PAKEs", rev = "047936a", package = "srp" }

[features]
default = []
vendored-botan = ["botan/vendored"]
# TODO: add features lmao
tweaks = []
store = []
