[package]
name = "plume_core"
description = "Core library for Impactor tools."
edition.workspace = true
version.workspace = true
authors.workspace = true
license = "MPL-2.0"
repository.workspace = true

[dependencies]
tokio.workspace = true
plist.workspace = true
uuid.workspace = true
thiserror.workspace = true
log.workspace = true
serde.workspace = true
serde_json.workspace = true
rustls.workspace = true
# Core dependencies
reqwest = { version = "0.11.14", default-features = false, features = [
    "blocking",
    "json",
    "rustls-tls",
] }
regex = "1.11.2"
base64 = "0.22"
hex = "0.4.3"
rand = "0.8.5"
# Cryptography
aes = "0.9.0-rc.4"
aes-gcm = "0.11.0-rc.3"
cbc = { version = "0.2.0-rc.3", features = ["alloc"] }
pbkdf2 = "0.13.0-rc.9"
hmac = "0.13.0-rc.5"
sha2 = "0.11.0-rc.5"
rsa = "0.9.8"
# Certificates
x509-certificate = "0.24.0"
pem = "3.0.5"
pem-rfc7468 = "0.7.0"
rcgen = "0.9.3"
sha1 = "0.10.6"             # p12
p12-keystore = "0.2.0"      # p12 crate only supports legacy PKCS#12
# Apple
goblin = "0.9.3"
# Forks
apple-codesign = { git = "https://github.com/PlumeImpactor/plume-apple-platform-rs", rev = "428b42f", package = "apple-codesign", default-features = false }
omnisette = { git = "https://github.com/PlumeImpactor/omnisette", rev = "c066ac2", package = "omnisette", features = [
    "remote-anisette-v3",
] }
srp = "0.7.0-rc.1"

[features]
default = []
tweaks = []
