[package]
name = "plume_shared"
description = "Commons for Impactor tools."
edition.workspace = true
version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
keyring = { version = "3.6.3", default-features = false, features = ["windows-native", "apple-native", "linux-native"] }
